--- a/CSS/general.css
+++ b/CSS/general.css
@@ -112,18 +112,17 @@ header nav ul li a img{
     height: 40px;
 }
 header div{
-    padding: 20px 0 40px;
+    width: 90%;
+    margin: 0 5%;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 header div .presentacion{
     position: relative;
     width: 600px;
-    padding: 8px 12px 8px 110px;
     text-align: center;
     cursor: default;
-    border-left: 3px solid var(--border-color-1-type-1);
 }
 header div .presentacion h1{
     text-align: center;
@@ -132,7 +131,7 @@ header div .presentacion h1{
 header div .presentacion p:nth-child(3){
     text-align: start;
     margin: 20px 0px;
-    padding-left: 18px;
+    padding: 0 18px;
     line-height: 30px;
     font-weight: 400;
     border-right: 3px solid var(--border-color-1-type-1);
@@ -169,7 +168,6 @@ header div .presentacion a img{
 header div picture{
     position: relative;
     top: 30px;
-    right: 40px;
     width: 360px;
     height: 460px;
     border: 1px solid var(--border-color-1-type-1);
@@ -537,5 +535,22 @@ footer div a:hover{
     100%{
         transform: translateY(0) rotate(90deg);
 
+    }
+}
+
+@media (max-width: 1100px){
+    header div{
+        flex-direction: column;
+        align-items: center;
+    }
+    header div .presentacion{
+        width: 600px;
+    }
+    header div picture{
+        width: 260px;
+        height: 300px;
+    }
+    header div picture img{
+        width: 260px;
     }
 }
